add pager & return JSONData struct & add user model
